# Verteilen2Cluster

./: .gitignore  CMakeLists.txt  README.md  build.sh  import.sh  update.sh
src/: main.cpp
src/model/: Database.cpp  Database.h  Job.cpp  Job.h  database.cpp  database.h
